tests/compile_fail/mongo_nonexistent_field.stderr
warning: unused imports: `FieldName` and `HasField`
 --> tests/compile_fail/mongo_nonexistent_field.rs:3:50
  |
3 | use tnuctipun::{FieldWitnesses, MongoComparable, HasField, FieldName};
  |                                                  ^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `Product: HasField<Weight>` is not satisfied
  --> tests/compile_fail/mongo_nonexistent_field.rs:30:10
   |
30 |         <Product as tnuctipun::field_witnesses::HasField<Weight>>::Value,
   |          ^^^^^^^ unsatisfied trait bound
   |
help: the trait `HasField<Weight>` is not implemented for `Product`
  --> tests/compile_fail/mongo_nonexistent_field.rs:8:1
   |
 8 | struct Product {
   | ^^^^^^^^^^^^^^
   = help: the following other types implement trait `HasField<F>`:
             `Product` implements `HasField<Name>`
             `Product` implements `HasField<Price>`
